--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Self Rally Ry</h1>
+<% if user_signed_in? %>
+  <p>Tämän näet vain jos olet kirjautunut sisään</p>
+<% end %>
