--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,22 @@
-<h1>Self Rally Ry</h1>
-<% if user_signed_in? %>
-  <p>Tämän näet vain jos olet kirjautunut sisään</p>
-<% end %>
+<h1>Welcome to Self-Rally.org</h1>
+<div class="row">
+  <div class="col-sm-5">
+    <p>Self-rally.org is Finnish *Advanced Squad Leader Player's website maintained by Self-Rally Platoon Ry (registered association). On this website, you will find information on Advanced Squad Leader and the Finnish players. We have been maintaining player ratings since 1999, and 2002 we launced self-rally.org</p>
+    <p>If you live in Finland and you want to find new people to play ASL with, you may consider becoming a supporter of our association.</p>
+  </div>
+  <div class="col-sm-2">
+    <%= image_tag "welcome.jpg" %>
+  </div>
+  <div class="col-sm-5">
+    <blockquote class="blockquote">
+      "Self-Rally.org is more valuable than my house!"
+    </blockquote>
+    <p>~ ASL Player, Houston, on Self-Rally.org, US housing market and low US Dollar value</p>
+    <h3>SISSUKONI XI</h3>
+    <p>On the island, nobody hears you scream (when you roll boxcars)</p>
+    <ul>
+      <li>Invitation & Rules</li>
+      <li>After Action Report</li>
+    </ul>
+  </div>
+</div>
