Lisätty Admin-controlleri ja aloitetu käyttäjähallintasivun teko

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,8 @@
     <blockquote class="blockquote">
       "Self-Rally.org is more valuable than my house!"
     </blockquote>
-    <p>~ ASL Player, Houston, on Self-Rally.org, US housing market and low US Dollar value</p>
+    <footer class="blockquote-footer">ASL Player, Houston, <cite title="Source Title">on Self-Rally.org,</cite> US housing market and low US Dollar value</footer>
+    <br />
     <h3>SISSUKONI XI</h3>
     <p>On the island, nobody hears you scream (when you roll boxcars)</p>
     <ul>
