--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,6 +20,10 @@
             <%= f.label :email %><br />
             <%= f.email_field :email, class: "form-control" %>
           </div>
+          <div class="form-group">
+            <%= f.label :role %><br />
+            <%= f.select :roles, @user.available_roles, {}, {class: "form-control"} %>
+          </div>
 
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
