Lisätty adminille käyttäjälista, ei toimi vielä

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,5 +3,5 @@
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
   <td><%= user.roles.join(",") %></td>
-  <td><%= link_to "Edit", edit_user_registration_path, id: user.id %></td>
+  <td>Edit</td>
 </tr>
