Lisätty julkaisijalle modeli ja näkymät sekä tehty import-taski. Lisäksi siivottu menuja.

--- a/app/views/shared/_application_header.html.erb
+++ b/app/views/shared/_application_header.html.erb
@@ -1,6 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Self-rally.org</a>
+    <%= link_to "Self-rally.org", root_path, class: "navbar-brand" %>
+    
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
