disabloi uusien julkaisijoiden lisääminen muille kuin admineille

--- a/app/views/publishers/index.html.erb
+++ b/app/views/publishers/index.html.erb
@@ -20,4 +20,4 @@
 
 <br>
 
-<%= link_to 'New Publisher', new_publisher_path %>
+<%= link_to 'New Publisher', new_publisher_path if logged_in?(:admin) %>
