--- a/app/views/publishers/show.html.erb
+++ b/app/views/publishers/show.html.erb
@@ -5,6 +5,8 @@
 <%= link_to 'Destroy', @publisher, method: :delete, data: { confirm: 'Are you sure?' } %> <br />
 <% end %>
 
+<%= render @publisher.publications %>
+
 <div class="auth-links">
   <%= link_to 'Back', publishers_path %>
 </div>
