--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -25,5 +25,6 @@
   <%= @game.status %>
 </p>
 
+<%= render 'players' %>
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
