--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Game</h1>
 
-<%= render 'form', game: @game %>
+<div class="card  mx-auto">
+  <div class="card-block">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>New Game</h1>
 
-<%= link_to 'Back', games_path %>
+        <%= render 'form', game: @game %>
+        <div class="auth-links">
+          <%= link_to 'Back', games_path %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
