ASennettu bootstrap-tables ja tehty skenaarioihin liittyviä tauluja nätimmäksi

--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1>Publications</h1>
 
-<table>
+<table data-toggle="table" data-search="true" data-mobile-responsive="true" data-pagination="true" data-page-size=25>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Publishing year</th>
-      <th>Publisher</th>
+      <th data-sortable="true">Name</th>
+      <th data-sortable="true">Publishing year</th>
+      <th data-sortable="true">Publisher</th>
     </tr>
   </thead>
 
