--- a/app/views/publishers/index.html.erb
+++ b/app/views/publishers/index.html.erb
@@ -2,10 +2,14 @@
 
 <h1>Publishers</h1>
 
-<table class="table">
+<table data-toggle="table" data-search="true" data-mobile-responsive="true" data-pagination="true" data-page-size=25>
   <thead>
     <tr>
-      <th>Name</th>
+      <th data-sortable="true">Name</th>
+      <th data-sortable="true">Publications</th>
+      <th data-sortable="true">Scenarios</th>
+      <th data-sortable="true">Games</th>
+      <th data-sortable="true">Average Rating</th>
     </tr>
   </thead>
 
@@ -13,6 +17,10 @@
     <% @publishers.each do |publisher| %>
       <tr>
         <td><%= link_to publisher.name, publisher_show_path(publisher) %></td>
+        <td><%= publisher.publications.count %></td>
+        <td><%= publisher.scenarios.count %></td>
+        <td><%= publisher.games.count %></td>
+        <td>WIP</td>
       </tr>
     <% end %>
   </tbody>
