--- a/app/views/scenarios/show.html.erb
+++ b/app/views/scenarios/show.html.erb
@@ -27,5 +27,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_scenario_path(@scenario) %> |
+<%= link_to 'Edit', edit_scenario_path(@scenario) if logged_in?(:admin, :editor)%> |
 <%= link_to 'Back', scenarios_path %>
