--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -1,24 +1,40 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Publications</h1>
+<div class="card">
+  <div class="card-block">
+    <div class="row input-group">
+      <div class="col-md-8">
+      </div>
+      <div class="col-md-3">
+        <%= form_for_filterrific @filterrific do |f| %>
+          <div>
+            Search
+            <%# give the search field the 'filterrific-periodically-observed' class for live updates %>
+            <%= f.text_field(
+              :search_query,
+              class: 'filterrific-periodically-observed'
+            ) %>
+        </div>
+      </div>
+      <div class="col-md-1">
+        <%= link_to(
+          'Reset filters',
+          reset_filterrific_url,
+          :class => "btn btn-primary"
+        ) %>
+    </div>
+    </div>
+  </div>
 
-<table data-toggle="table" data-search="true" data-mobile-responsive="true" data-pagination="true" data-page-size=25>
-  <thead>
-    <tr>
-      <th data-sortable="true">Name</th>
-      <th data-sortable="true">Publishing year</th>
-      <th data-sortable="true">Publisher</th>
-    </tr>
-  </thead>
+<% end %>
 
-  <tbody>
-    <% @publications.each do |publication| %>
-      <tr>
-        <td><%= link_to publication.name, publication_show_path(publication) %></td>
-        <td><%= publication.publishing_year %></td>
-        <td><%= link_to publication.publisher.name, publisher_show_path(publication.publisher) %></td>
-</td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+<%= render(
+  partial: 'publications/list',
+  locals: { publications: @publications }
+) %>
+</br>
+</div>
+
+
