--- a/app/views/scenarios/index.html.erb
+++ b/app/views/scenarios/index.html.erb
@@ -1,32 +1,42 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Scenarios</h1>
+<div class="card">
+  <div class="card-block">
+    <div class="row input-group">
+      <div class="col-md-8">
+        <%= render_filterrific_spinner %>
+      </div>
+      <div class="col-md-3">
+        <%= form_for_filterrific @filterrific do |f| %>
+          <div>
+            Search
+            <%# give the search field the 'filterrific-periodically-observed' class for live updates %>
+            <%= f.text_field(
+              :search_query,
+              class: 'filterrific-periodically-observed'
+            ) %>
+        </div>
+      </div>
+      <div class="col-md-1">
+        <%= link_to(
+          'Reset filters',
+          reset_filterrific_url,
+          :class => "btn btn-primary"
+        ) %>
+    </div>
+    </div>
+  </div>
 
-<table data-toggle="table" data-search="true" data-mobile-responsive="true" data-pagination="true" data-page-size=25>
-  <thead>
-    <tr>
-      <th data-sortable="true">Name</th>
-      <th data-sortable="true">Belligerents</th>
-      <th data-sortable="true">Scenario date</th>
-      <th data-sortable="true">Turns</th>
-      <th data-sortable="true">Location</th>
+<% end %>
 
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @scenarios.each do |scenario| %>
-      <tr>
-        <td><%= link_to scenario.name, scenario_show_path(scenario) %></td>
-        <td><%= scenario.belligerents %></td>
-        <td><%= scenario.scenario_date %></td>
-        <td><%= scenario.gameturns %></td>
-        <td><%= scenario.location_id %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render(
+  partial: 'scenarios/list',
+  locals: { scenarios: @scenarios }
+) %>
+</br>
+</div>
 
-<br>
 
 <%= link_to 'New Scenario', new_scenario_path if logged_in?(:admin, :editor) %>
