--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,34 +2,30 @@
 
 <h1>Games</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
+      <th>#</th>
       <th>Date</th>
       <th>Scenario</th>
       <th>Gamingtime</th>
       <th>Turnsplayed</th>
       <th>Status</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @games.each do |game| %>
       <tr>
+        <td><%= link_to game.id, game %>
         <td><%= game.date %></td>
-        <td><%= game.scenario_id %></td>
+        <td><%= game.scenario.name %></td>
         <td><%= game.gamingtime %></td>
         <td><%= game.turnsplayed %></td>
         <td><%= game.status %></td>
-        <td><%= link_to 'Show', game %></td>
-        <td><%= link_to 'Edit', edit_game_path(game) %></td>
-        <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+<%= paginate @games %>
 
-<br>
-
-<%= link_to 'New Game', new_game_path %>
