Lisätty filtteröivä dropdowni peliraportin formille. Ja muokattu ko. formia

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
-
+@import "select2";
+@import "select2-bootstrap";
 /*
  * Base structure
  */
