--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -3,11 +3,11 @@
   <div class="card-block">
     <div class="row">
       <div class="col-md-12">
-        <h1>New Game</h1>
+        <h1>New Game Report</h1>
 
         <%= render 'form', game: @game %>
         <div class="auth-links">
-          <%= link_to 'Back', games_path %>
+          
         </div>
       </div>
     </div>
