--- a/app/views/scenarios/show.html.erb
+++ b/app/views/scenarios/show.html.erb
@@ -1,31 +1,30 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @scenario.name %>
-</p>
-
-<p>
-  <strong>Scenario date:</strong>
-  <%= @scenario.scenario_date %>
-</p>
-
-<p>
-  <strong>Gameturns:</strong>
-  <%= @scenario.gameturns %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @scenario.location_id %>
-</p>
-
-<p>
+<div class="card">
+  <h2><%= @scenario.name %></h2>
+  <h4><%= @scenario.belligerents %></h4>
+  <table class="table table-sm">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Location</th>
+      <th>Initiative</th>
+      <th>Game turns</th>
+    </tr>
+    </thead>
+  <tbody>
+    <tr>
+      <td><%= @scenario.scenario_date %></td>
+      <td><%= @scenario.location_id %>(WIP)</td>
+      <td><%= @scenario.initiative %></td>
+      <td><%= @scenario.gameturns%></td>
+    </tr>
+  </tbody>
+  </table>
+</div>
 <% @scenario.scenario_publications.each do |sp| %>
   <strong><%= sp.publication.publishing_year %></strong> by <%= link_to sp.publication.publisher.name, publisher_show_path(sp.publication.publisher) %> in <%= link_to sp.publication.name, publication_show_path(sp.publication) %> <strong><%= sp.code %></strong><br />
 <% end %>
 </p>
 
 
-<%= link_to 'Edit', edit_scenario_path(@scenario) if logged_in?(:admin, :editor)%> |
+<%= link_to 'Edit', scenario_edit_path(@scenario) if logged_in?(:admin, :editor)%> |
 <%= link_to 'Back', scenarios_path %>
