--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,51 +11,51 @@
     </div>
   <% end %>
   <div class="card-body">
-  <div class="form-group">
-    <%= form.label :date %>
-    <%= form.date_select :date, id: :game_date, class: "form-control"  %>
-  </div>
+    <div class="form-group">
+      <%= form.label :date %>
+      <%= form.date_select :date, id: :game_date, class: "form-control"  %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :scenario_id %>
-    <%= form.collection_select :scenario_id, Scenario.all, :id, :name, {:include_blank => true}, { class: "form-control", id: "scenario-select" } %>
-  </div>
-  <div class="row">
-    <div class="col">
-      <div class="form-group">
-        <%= form.label :gamingtime %>
-        <%= form.text_field :gamingtime, id: :game_gamingtime, class: "form-control"  %>
+    <div class="form-group">
+      <%= form.label :scenario_id %>
+      <%= form.collection_select :scenario_id, Scenario.all, :id, :name, {:include_blank => true}, { class: "form-control", id: "scenario-select" } %>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <%= form.label :gamingtime %>
+          <%= form.text_field :gamingtime, id: :game_gamingtime, class: "form-control"  %>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <%= form.label :turnsplayed %>
+          <%= form.text_field :turnsplayed, id: :game_turnsplayed, class: "form-control"  %>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-check form-check-inline">
+          <%= form.label :status %><br>
+          <%= form.collection_radio_buttons :status, Game.statuses.keys[0..1].map { |w| [w.humanize, w] }, :second, :first, html_options: { class: 'form-control' } do |b|  %>
+            <%= b.label { b.radio_button + " " + b.text } %> 
+          <% end %>
+        </div>
       </div>
     </div>
-    <div class="col">
-      <div class="form-group">
-        <%= form.label :turnsplayed %>
-        <%= form.text_field :turnsplayed, id: :game_turnsplayed, class: "form-control"  %>
-      </div>
-    </div>
-    <div class="col">
-      <div class="form-check form-check-inline">
-        <%= form.label :status %><br>
-        <%= form.collection_radio_buttons :status, Game.statuses.keys[0..1].map { |w| [w.humanize, w] }, :second, :first, html_options: { class: 'form-control' } do |b|  %>
-          <%= b.label { b.radio_button + " " + b.text } %> 
-<% end %>
-      </div>
-    </div>
-  </div>
   </div>
   <div class="card-deck">
-  <% i = 1 %>
-  <%= form.fields_for :game_players  do |pf| %>
-    <div class="form-group">
-      <%= render partial: 'games/player', locals: { pf: pf, i: i } %>
-      <% i += 1 %>
-    </div>
-  <% end %>
+    <% i = 1 %>
+    <%= form.fields_for :game_players  do |pf| %>
+      <div class="card w-25">
+        <%= render partial: 'games/player', locals: { pf: pf, i: i } %>
+        <% i += 1 %>
+      </div>
+    <% end %>
   </div>
 
 
 
-
+  <br>
   <div class="actions">
     <%= form.submit  submit_button_helper(action_name), class: "btn btn-primary"%>
     <%= link_to 'Cancel', @game, :class => "btn btn-secondary"%>
