--- a/app/views/games/_player_card.html.erb
+++ b/app/views/games/_player_card.html.erb
@@ -10,10 +10,11 @@
   </div>
 
   <ul class="list-group list-group-flush">
-    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Pregame Odds", value: "WIP" } %></li>
-    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Wagering Odds", value: "WIP" } %></li>
-    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Rating &Delta;".html_safe, value: "WIP" } %></li>
-    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Post-game Rating", value: "WIP" } %></li>
+    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Pregame Rating", value: player.previous_rating } %></li>
+    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Pregame Odds", value: pregame_odds(player.expected_score) } %></li>
+    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Wagering Odds", value: wagering_odds(player.expected_score) } %></li>
+    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Rating &Delta;".html_safe, value: player.rating_delta } %></li>
+    <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Post-game Rating", value: player.new_rating } %></li>
     <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Snakes", value: player.snake_eyes } %></li>
     <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Boxcars", value: player.boxcars } %></li>
     <li class="list-group-item"><%= render partial: 'games/player_stats', locals: { title: "Beers", value: player.beers } %></li>
