--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -13,7 +13,7 @@
   <div class="card-body">
     <div class="form-group">
       <%= form.label :date %>
-      <%= form.date_select :date, id: :game_date, class: "form-control"  %>
+      <%= form.datetime_select :date, id: :game_date, class: "form-control"  %>
     </div>
 
     <div class="form-group">
