--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,9 +1,21 @@
-%h1= @user.full_name
 .card
+  .card-header
+    %ul.nav.nav-tabs.card-header-tabs
+      %li.nav-item= link_to "#{@user.current_rank.name.humanize} #{@user.full_name}", "#", class: "nav-link active"
+      %li.nav-item= link_to "Game List", "#", class: "nav-link disabled"
+      %li.nav-item= link_to "Opponents", "#", class: "nav-link disabled"
+      %li.nav-item= link_to "Player Analysis", "#", class: "nav-link disabled"
   .card-body
-    .row
-      .col= image_tag(asset_path(@user.current_rank.img))
-    -@user.user_ranks.order(promotion_date: :desc).each do |user_rank|
-      .row
-        .col #{user_rank.rank.name.capitalize} (#{user_rank.promotion_date})
+    .card-block
+      .card.mb-3
+        .card-body
+          -@user.user_ribbons.each do |ribbon|
+            = render 'ribbon_card', :ribbon => ribbon
+      .card.mb-3
+        .card-body
+          .row
+            .col= image_tag(asset_path(@user.current_rank.img))
+          -@user.user_ranks.order(promotion_date: :desc).each do |user_rank|
+            .row
+              .col.small #{user_rank.rank.name.capitalize} (#{user_rank.promotion_date.strftime("%d.%m.%Y")})
 
