--- a/app/views/users/games.html.haml
+++ b/app/views/users/games.html.haml
@@ -1,1 +1,6 @@
-%h1 Gaming History
+.card
+  .card-header
+    =render 'menu' 
+  .card-body
+    -@games.each do |game|
+      .row= render 'shared/game_card', :game => game 
