--- a/app/views/shared/_game_card.html.haml
+++ b/app/views/shared/_game_card.html.haml
@@ -3,9 +3,11 @@
     .row
       .col-sm-3= game.date.strftime("%d.%m.%Y")
       .col-sm-6.text-center= link_to game.scenario.name, scenario_path(game.scenario)
-      .col-sm-3= link_to "Report #{game.id}", game_path(game)
+      .col-sm-3
+        %span.float-right= link_to "Report #{game.id}", game_path(game)
   .card-body
     .row
-      .col-sm-5= render 'shared/player_in_game_card', :player => game.game_players.first, :init => true
-      .col-sm-2 stats
-      .col-sm-5= render 'shared/player_in_game_card', :player => game.game_players.first, :init => false 
+      .col-sm-5= render 'shared/player_in_game_card', :player => game.player_by_initiative(1), :init => true
+      .col-sm-2
+        %h3 VS
+      .col-sm-5= render 'shared/player_in_game_card', :player => game.player_by_initiative(0), :init => false 
