--- a/app/views/shared/_player_in_game_card.html.haml
+++ b/app/views/shared/_player_in_game_card.html.haml
@@ -1,1 +1,9 @@
-%h4= player.user.full_name
+.row
+  .col
+    .text-center= image_tag('http://via.placeholder.com/75x75')
+    .text-center #{player.previous_rating} 
+    .text-center #{player.rating_delta}
+  .col
+    .row #{player.force.name}
+    .row #{link_to player.user.full_name, user_path(player.user)}
+    .row= player.winner ? "Winner" : "Loser" 
