--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -21,7 +21,7 @@
       <%= form.datetime_select :date, id: :game_date, class: "form-control"  %>
     </div>
 
-    <div class="form-group">
+    <div class="form-group scenario-select">
       <%= form.label :scenario_id %>
         <%= form.collection_select :scenario_id, Scenario.all, :id, :name, {:include_blank => true}, { class: "form-control", id: "scenario-select" } %>
     </div>
