--- a/app/views/games/_player.html.erb
+++ b/app/views/games/_player.html.erb
@@ -1,4 +1,4 @@
-
+<div id="foo"></div>
 <div class="card-header">
   <div id="force-name-<%= i %>">
     <%= pf.object.force.nil? ? "-" : pf.object.force.name %>
@@ -10,7 +10,7 @@
 </div>
 <div class="card-body">
   <%= pf.hidden_field :force_id %>
-  <div class="form-group row">
+  <div class="form-group row player-select-<%= i %>">
     <%= pf.label :name, class: "col-sm-2 col-form-label" %>
     <%= pf.collection_select :user_id, User.all, :id, :full_name, {:include_blank => true}, {selected: pf.object.user_id, id: "player-select-#{i}"} %>
   </div>
