--- a/app/views/publications/show.html.haml
+++ b/app/views/publications/show.html.haml
@@ -3,7 +3,7 @@
     %h3.d-inline= @publication.name
     %span.d-inline.float-right
       = link_to 'Edit', publication_edit_path(@publication), class: 'btn btn-secondary' if logged_in?(:user)
-      = link_to 'Destroy', publication_destroy_path(@publication), class: 'btn btn-danger', data: { confirm: 'Are you sure?' } if logged_in?(:admin)
+      = link_to 'Delete', publication_destroy_path(@publication), class: 'btn btn-danger', data: { confirm: 'Are you sure?' } if logged_in?(:admin)
   .card-body
     %p From #{link_to @publication.publisher.name, publisher_show_path(@publication.publisher)}
     %p Publishing year: #{@publication.publishing_year}
