--- a/app/views/publishers/show.html.haml
+++ b/app/views/publishers/show.html.haml
@@ -3,7 +3,7 @@
     %h4.d-inline= @publisher.name
     %span.d-inline.float-right
       = link_to 'Edit', publisher_edit_path(@publisher), class: 'btn btn-secondary' if logged_in?(:user)
-      = link_to 'Destroy', publisher_destroy_path(@publisher), class: 'btn btn-danger', data: { confirm: 'Are you sure?' } if logged_in?(:admin)
+      = link_to 'Delete', publisher_destroy_path(@publisher), class: 'btn btn-danger', data: { confirm: 'Are you sure?' } if logged_in?(:admin)
   .card-body
     %p List of publications from this publisher
     = render partial: 'publications/list', locals: { publications: @publications }
