Fixed initiative assignment for scenarios

--- a/app/views/scenarios/_form.html.haml
+++ b/app/views/scenarios/_form.html.haml
@@ -31,7 +31,7 @@
               = sform.label :initiative, class: 'col-sm-2 col-form-label'
               .col-sm-10
                 %span.float-right
-                  = radio_button_tag "scenario[initiative_index]", index, sform.object.initiative == 1
+                  = radio_button_tag "scenario[initiative_index]", index, sform.object.initiative
             .form-group.row
               = sform.label :force, class: 'col-sm-2 col-form-label'
               .col-sm-10
