Added rules to scenario form

--- a/app/views/scenarios/show.html.haml
+++ b/app/views/scenarios/show.html.haml
@@ -1,12 +1,11 @@
 .card
   .card-header
-    %span.float-right.d-inline
-      = link_to 'Edit', scenario_edit_path(@scenario), class: 'btn btn-secondary' if logged_in?(:user)
-      = link_to 'Delete', scenario_destroy_path(@scenario), class: 'btn btn-danger', data: { confirm: 'Are you sure?' } if logged_in?(:admin) if logged_in?(:admin)
     %ul.nav.nav-tabs.card-header-tabs
       %li.nav-item= link_to "Info", "#", class: "nav-link active"
       %li.nav-item= link_to "Comments", scenario_comments_path(@scenario), class: "nav-link"
       %li.nav-item= link_to "Change history", "#", class: "nav-link disabled"
+      %li.flex-row-reverse.ml-auto.mr-2= link_to 'Edit', scenario_edit_path(@scenario), class: 'btn btn-secondary' if logged_in?(:user)
+      %li.flex-row-reverse-ml-auto= link_to 'Delete', scenario_destroy_path(@scenario), class: 'btn btn-danger', data: { confirm: 'Are you sure?' } if logged_in?(:admin) if logged_in?(:admin)
   .card-body
     %h5.card-title= @scenario.name
     .row
