--- a/app/views/scenarios/_form.html.haml
+++ b/app/views/scenarios/_form.html.haml
@@ -37,6 +37,11 @@
               .col-sm-10
                 = sform.collection_select :force_id, Force.all, :id, :name, { include_blank: true }, {  class: 'form-control' }
                 - index += 1
+    .card
+      .card-header Rules
+      .card-body
+        .form-group.row
+          = form.collection_check_boxes(:rule_ids, Rule.all, :id, :name)
     .actions
       = form.submit 'Save', class: 'btn btn-primary'
       = link_to 'Cancel', scenarios_path, class: 'btn btn-warning'
